<resources>
    <string name="app_name">5E Character Tracker</string>
    <string name="title_activity_begin_cac">BeginCAC</string>
    <string name="button">Button</string>
    <string name="character_name">Character Name</string>


    <string name="AbilityScoreRules">
        Option 1: Roll four 6-sided dice and record the total of the highest three dice, record
        this number and repeat 5 more times. Assign these values to your ability scores.\n
        Option 2: Use 15, 14, 13, 12, 10, 8 as your values. Assign these to your ability scores.\n
        Option 3: Customize your ability scores by choosing a variation that suits your needs.
        Examples include using (15, 15, 15, 8, 8, 8) or (13, 13, 13, 12, 12, 12) or something else
        within that range.
    </string>

    <string name="StrengthDescription">
        Measures: Natural athleticism, bodily power \n
        Important for: Barbarian, fighter, paladin \n
        Racial Increases: \n
            \tMountain Dwarf(+2)  \t\tHalf-Orc(+2)\n
            \tDragonborn(+2)      \t\t\tHuman(+1)
    </string>

    <string name="DexterityDescription">
        Measures: Physical agility, reflexes, balance, poise \n
        Important for: Monk, Ranger, Rouge \n
        Racial Increases: \n
            \tElf(+2)  \t\tForest-Gnome(+1)\n
            \tHalfling(+2)      \t\t\tHuman(+1)
    </string>

    <string name="ConstitutionDescription">
        Measures: Health, stamina, vital force \n
        Important for: Everyone \n
        Racial Increases: \n
            \tDwarf(+2)  \t\tHalf-Orc(+1)\n
            \tStout Halfling(+1)      \t\t\tHuman(+1)
            \tRock Gnome(+1)
    </string>

    <string name="IntelligenceDescription">
        Measures: Mental acuity, information recall, analytical skill \n
        Important for: Wizard \n
        Racial Increases: \n
            \tHigh elf(+1)  \t\tTiefling(+1)\n
            \tGnome(+2)      \t\t\tHuman(+1)
    </string>

    <string name="WisdomDescription">
        Measures: Awareness, intuition, insight \n
        Important for: Cleric, druid \n
        Racial Increases: \n
            \tHill Dwarf(+1)  \t\tHuman(+1)\n
            \tWood Elf(+1)
    </string>

    <string name="CharismaDescription">
        Measures: Confidence, eloquence, leadership\n
        Important for: Bard, sorcerer, warlock\n
        Racial Increases: \n
            \tHalf Elf(+2)  \t\tDragonborn(+1)\n
            \tDrow(+1)  \t\tHuman(+1)\n
            \tLightfoot Halfling (+1) \t\tTiefling(+2)
    </string>

    <string name="AbilityModDescription"> Ability modifiers are determined by using a formula.
        Take your ability score, divide it by 2 and round down. Take your answer and subtract 5,
        this is your ability modifier. These modifiers will be applied to most attack rolls, ability
        checks, and are generally used in play more often than the scores themselves. </string>

    <string name="HitDieDescription"> Hit Die can be used after short rests to regain Hit Points. The player rolls
        the die and adds the result to their hit points. A player at level 1 has one Hit Die,
        this number will increase as you level up. After spending your Hit Die, they can be regained
        during a long rest. The die type used for your Hit Die is determined by your class.</string>

    <string name="HitPointsDescription">Your Hit Points are initially set to the highest roll of your
        Hit Die plus your Constitution Modifier. This also becomes your Hit Point Maximum.  </string>


    <string name="ProficiencyDescription"> Your level determines your proficiency bonus which
        will be applied to many of the players stats. Your class determines your weapon proficiencies,
        your saving throw proficiencies and some of your skill and tool proficiencies. </string>



    <string name="description">The state encompasses nearly the entire volcanic Hawaiian archipelago, which comprises hundreds of islands spread over 1,500 miles (2,400 km). At the southeastern end of the archipelago, the eight main islands are—in order from northwest to southeast: Ni\ʻihau, Kaua\ʻi, O\ʻahu, Moloka\ʻi, Lāna\ʻi, Kaho\ʻolawe, Maui, and the Island of Hawai\ʻi. The last is the largest island in the group; it is often called the "Big Island" or "Hawai\ʻi Island" to avoid confusion with the state or archipelago. The archipelago is physiographically and ethnologically part of the Polynesian subregion of Oceania.</string>

</resources>
