<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_background"
    tools:context=".Pop_Help_Activity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Ability Scores"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="How To Choose:"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/CAC_Ability_Score_Rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:text="@string/AbilityScoreRules"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3"
                tools:layout_editor_absoluteX="143dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="Strength:"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:text="@string/StrengthDescription"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3"
                tools:layout_editor_absoluteX="143dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="Dexterity:"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:text="@string/DexterityDescription"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3"
                tools:layout_editor_absoluteX="143dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="Constitution:"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/CAC_Constitution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorGray"
                android:text="@string/ConstitutionDescription"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3"
                tools:layout_editor_absoluteX="143dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="Intelligence:"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:text="@string/IntelligenceDescription"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3"
                tools:layout_editor_absoluteX="143dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="Wisdom:"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:text="@string/WisdomDescription"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3"
                tools:layout_editor_absoluteX="143dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="Charisma:"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:text="@string/CharismaDescription"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3"
                tools:layout_editor_absoluteX="143dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>