<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_background"
    tools:context=".Pop_ReviewHelp">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Player Stats"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="Ability Modifiers:"
                android:textSize="20sp"
                android:textColor="#FFF"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <TextView
                android:id="@+id/abilityMods_desc_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:text="@string/AbilityModDescription"
                android:textSize="17sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="Hit Die:"
                android:textSize="20sp"
                android:textColor="#FFF"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <TextView
                android:id="@+id/HitDie_desc_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:text="@string/HitDieDescription"
                android:textSize="17sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="Hit Points: "
                android:textSize="20sp"
                android:textColor="#FFF"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/HitPoints_desc_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:text="@string/HitPointsDescription"
                android:textSize="17sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>